--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,3 +1,4 @@
+@import 'reset';
 @import 'variables';
 @import 'form';
 
@@ -18,21 +19,25 @@ html {
 }
 
 body {
-    height: 100%;
+    width: 100%;
     background-color: white;
     font-size: 1em;
     color: $text-base-color;
+    margin: 0 auto;
 
     .header {
-        width:1920px;
+        width:100%;
         border-bottom: 1px solid $text-base-color;
         padding-bottom: 10px;
 
         .header_logos {
             width: 56px;
             height: 25px;
-            top: 17px;
-            left: 30px;
+            margin-top: 17px;
+            margin-left: 30px;
+            margin-right: 30px;
+
+            .header_pageTitle {
             font-family: Avenir;
             font-size: 18px;
             font-weight: 400;
@@ -40,6 +45,7 @@ body {
             letter-spacing: 0px;
             text-align: left;
             color: #000000;
+            }
         }    
     }
 
@@ -52,13 +58,18 @@ body {
   .container {
     padding: 16px 16px;
     width: 100%;
+    
+    .pageTitle {
+        width: 98%;
+        margin: 0 auto;
+    }
 
-    .body_pageTitle {
-        width: 183px;
+    .pageTitle_heading {
         height: 36px;
         top: 92px;
         left: 26px;
         padding: 0px 100px 0px 0px;
-
+        font-weight: bold;
+        font-size: 20px;
     }
   }
