--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -71,5 +71,6 @@ body {
         padding: 0px 100px 0px 0px;
         font-weight: bold;
         font-size: 20px;
+        font-weight: bold;
     }
   }
