--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,21 +1,24 @@
-%h2 Sign up
-= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  .field
-    = f.label :password
-    - if @minimum_password_length
-      %em
-        (#{@minimum_password_length} characters minimum)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .actions
-    = f.submit "Sign up"
-= render "devise/shared/links"
+.container
+  .pageTitle
+    %h2.pageTitle_heading Sign up
+  .sign_form
+    = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
+      = render "devise/shared/error_messages", resource: resource
+      .field
+        = f.label :email, class: 'email_label'
+        %br/
+        = f.email_field :email, autofocus: true, autocomplete: "email", class: 'email_field'
+      .field
+        = f.label :password, class: 'password_label'
+        - if @minimum_password_length
+          %em
+            (#{@minimum_password_length} characters minimum)
+        %br/
+        = f.password_field :password, autocomplete: "new-password", class: 'password_field_includedConfirm'
+      .field
+        = f.label :password_confirmation, class: 'password_label'
+        %br/
+        = f.password_field :password_confirmation, autocomplete: "new-password", class: 'password_field'
+      .actions
+        = f.submit "Sign up", class: 'btn-submit'
+    -# = render "devise/shared/links"
