Boardの投稿部分の作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,9 @@
 @import 'reset';
+@import 'tabs';
 @import 'variables';
+@import 'board';
 @import 'form';
+@import 'common';
 
 html {
     word-spacing: 1px;
