Profileモデルの画面作成、Boardモデルのカラム名の変更２

--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -3,8 +3,8 @@
   .board_detail
     -# = image_tag @board.user.avatar_image
     %div
-    -#   %p= @board.author_name
-      %p= @board.display_created_at
+      %p= @board.author_name
+      -# %p= @board.display_created_at
   - if user_signed_in? && current_user.has_written?(@board)
     .board_detail_actions
       .dropdown
@@ -13,5 +13,5 @@
           = link_to '編集する', edit_board_path(@board)
           = link_to '削除する', board_path(@board), data: {method: 'delete', confirm: '本当に削除してもいよろしいですか？'}
   .board_content
-    = @board.description
+    = @board.content
 
