ログイン、サインアップのリンク追加

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -21,4 +21,4 @@
         = f.password_field :password_confirmation, autocomplete: "new-password", class: 'password_field'
       .actions
         = f.submit "Sign up", class: 'btn-submit'
-    -# = render "devise/shared/links"
+    = render "devise/shared/links"
