バリデーションとエラーの表示

--- a/app/views/boards/new.html.haml
+++ b/app/views/boards/new.html.haml
@@ -1,4 +1,7 @@
 .container
+  %ul
+    - @board.errors.full_messages.each do |message|
+      %li= message
   .pageTitle
     %h2.pageTitle_heading New Board
   .sign_form
