--- a/app/views/commons/_board.html.haml
+++ b/app/views/commons/_board.html.haml
@@ -4,7 +4,5 @@
       .card_title
         = board.title
       .card_detail
-        -# = image_tag board.user.avatar_image
-        -# %div
-        -#   %p= board.author_name
-        -#   %p= board.display_created_at
+        = image_tag board.user.avatar_image
+        = board.content
