トップページのh2と「+add new board」の追加

--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -2,6 +2,13 @@
 $heart-size: 16px;
 $avatar-size: 32px;
 
+.all_boards_tag {
+  font-weight: bold;
+  font-size: 22px;
+  margin-top: 10px;
+  margin-bottom: 30px;
+}
+
 .card {
   background-color: $base-bg-color;
   margin: 16px 0;
