--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -10,6 +10,7 @@ $back-icon-size: 16px;
   background-color: white;
   padding: $header-padding-y 16px;
   font-weight: bold;
+  border-bottom: solid 1px black;
 
   a {
     // color: white;
