ドロップダウン追加とアバターの表示

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -7,6 +7,10 @@
 .dropdown {
     position: relative;
     display: inline-block;
+    
+    .dropdown_menu {
+      padding-right: 25px;
+    }
   }
   
   .dropdown-content {
