--- a/app/views/commons/_board.html.haml
+++ b/app/views/commons/_board.html.haml
@@ -3,6 +3,15 @@
     .card_content
       .card_title
         = board.title
+      - if user_signed_in? && current_user.has_written?(board)
+        .board_detail_actions
+          .dropdown
+            .dropdown_menu
+              = image_tag 'actions.svg', class: 'dropbtn'
+              .dropdown-content.mini
+                = link_to 'Edit', edit_board_path(board)
+                = link_to 'Delete', board_path(board), data: {method: 'delete', confirm: '本当に削除してもいよろしいですか？'}
+      .card_content_detail
+        = board.content
       .card_detail
         = image_tag board.user.avatar_image
-        = board.content
