--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -11,8 +11,8 @@
         .dropdown_menu
           = image_tag 'actions.svg', class: 'dropbtn'
           .dropdown-content.mini
-            = link_to '編集する', edit_board_path(@board)
-            = link_to '削除する', board_path(@board), data: {method: 'delete', confirm: '本当に削除してもいよろしいですか？'}
+            = link_to 'Edit', edit_board_path(@board)
+            = link_to 'Delete', board_path(@board), data: {method: 'delete', confirm: '本当に削除してもいよろしいですか？'}
   .board_content
     = @board.content
 
