--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -8,7 +8,7 @@
 .pageTitle {
   margin-bottom: 10px;
   .pageTitle_heading {
-    font-weight: normal;
+    font-weight: bold;
     font-size: 20px;
 }
 }
@@ -52,6 +52,10 @@ input,select {
       margin-bottom: 20px;
     }
 
+    &.eyecatch_field {
+      margin-top: 5px;
+    }
+
     &.btn-submit {
         top: 889px;
         // left: 30px;
@@ -64,6 +68,20 @@ input,select {
   
   label {
     font-size: 16px;
+
+    &.eyecatch_label {
+      width: 49px;
+      height: 25px;
+      top: 157px;
+      left: 26px;
+      font-family: Avenir;
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 25px;
+      letter-spacing: 0px;
+      text-align: left;
+      color: #000000;
+    }
 
     &.email_label {
       width: 44px;
