--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -2,7 +2,23 @@
   %h2.all_boards_tag
     = @board.title
   - @tasks.each do |task|
-    = render 'commons/board', board: task
+    = link_to task_path(task) do
+      .card
+        .card_content
+          .card_title
+            = task.title
+          - if user_signed_in? && current_user.has_written?(task)
+            .board_detail_actions
+              .dropdown
+                .dropdown_menu
+                  = image_tag 'actions.svg', class: 'dropbtn'
+                  .dropdown-content.mini
+                    = link_to 'Edit', edit_task_path(task)
+                    = link_to 'Delete', task_path(task), data: {method: 'delete', confirm: '本当に削除してもいよろしいですか？'}
+          .card_content_detail
+            = task.content
+          .card_detail
+            = image_tag task.user.avatar_image
   = link_to new_task_path do
     .add_new_board
       .add_new_board_content
