--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -4,6 +4,9 @@
   - @tasks.each do |task|
     = link_to task_path(task) do
       .card
+        - if task.eyecatch.attached?
+          .card_image
+            = image_tag task.eyecatch
         .card_content
           .card_title
             = task.title
