--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -1,22 +1,23 @@
-.task
+.task_top
+  .card_content
+    .card_title
+      = @task.title
+    .board_detail_actions
+      - if user_signed_in? && current_user.has_written_task?(@task)
+        .task_detail_actions
+          .dropdown
+            = image_tag 'actions.svg', class: 'dropbtn'
+            .dropdown-content.mini
+              = link_to 'Edit', edit_task_path(@task)
+              = link_to 'Delete', task_path(@task), data: {method: 'delete', confirm: '本当に削除してもいよろしいですか？'}
+
+.task_image_section
   - if @task.eyecatch.attached?
     .task_image 
       = image_tag @task.eyecatch
-  %h1.task_title= @task.title
-  .task_detail
-    = image_tag @task.user.avatar_image
-    %div
-      %p= @task.author_name
-      %p= @task.display_created_at
-  - if user_signed_in? && current_user.has_written?(@task)
-    .task_detail_actions
-      .dropdown
-        = image_tag 'actions.svg', class: 'dropbtn'
-        .dropdown-content.mini
-          = link_to 'Edit', edit_task_path(@task)
-          = link_to 'Delete', task_path(@task), data: {method: 'delete', confirm: '本当に削除してもいよろしいですか？'}
-  .task_content
-    = @task.content
+  .task_content_section
+    .task_content
+      = @task.content
 -#   - if user_signed_in?
 -#     - if current_user.has_liked?(@article)
 -#       .article_heart
