--- a/app/assets/stylesheets/board.scss
+++ b/app/assets/stylesheets/board.scss
@@ -38,14 +38,15 @@ $container-padding: 16px;
   }
 
   &_detail {
-    padding-top: 10px;
+    // padding-top: 10px;
     display: flex;
     font-size: 12px;
     position: relative;
 
     &_actions {
-      right: 0px;
+      right: 30px;
       position: absolute;
+      margin-top: -30px;
     }
   }
 
