--- a/app/assets/stylesheets/task.scss
+++ b/app/assets/stylesheets/task.scss
@@ -1,41 +1,13 @@
+@import './variables';
 $heart-size: 32px;
 $avatar-size: 32px;
 $container-padding: 16px;
 
-.task {
-  background-color: white;
+.task_top {
   margin: 16px 16px;
-  padding: $container-padding $container-padding;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-  position: relative;
 
-  &_image {
-    height: 180px;
-    position: relative;
-    overflow: hidden;
-    margin: $container-padding * -1 $container-padding * -1 16px;
-
-    img {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-      transform: translate(-50%, -50%);
-      width: 100%;
-    }
-  }
-
-  h2 {
-    font-size: 16px;
-  }
-
-  &_title {
+  .task_title {
     font-size: 22px;
-  }
-
-  &_comment {
-    padding: 12px 0;
   }
 
   &_detail {
@@ -58,8 +30,40 @@ $container-padding: 16px;
     }
   }
 
-  &_content {
+}
+
+.task_image_section {
+  margin: 16px 16px;
+  padding: $container-padding $container-padding;
+
+  .task_image {
+    height: 180px;
+    position: relative;
+    overflow: hidden;
+    // margin: $container-padding * -1 $container-padding * -1 16px;
+    margin-bottom: 40px;
+
+    img {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%);
+      width: 100%;
+    }
+}
+
+.task_content_section {
+  background-color: $base-bg-color;
+  // margin: 16px 16px;
+  padding: $container-padding $container-padding;
+  // box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
+  position: relative;
+  
+  .task_content {
     padding: 24px 0 32px;
   }
+}
 
 }
