--- a/app/assets/stylesheets/form.scss
+++ b/app/assets/stylesheets/form.scss
@@ -64,6 +64,11 @@ input,select {
         color: white;
         font-weight: bold;
     }
+
+    &.limit_field {
+      margin-top: 5px;
+      margin-bottom: 20px;
+    }
   }
   
   label {
@@ -130,6 +135,18 @@ input,select {
       height: 25px;
       top: 263px;
       left: 26px;
+      font-family: Avenir;
+      font-size: 18px;
+      font-weight: 400;
+      line-height: 25px;
+      letter-spacing: 0px;
+      text-align: left;
+      color: #000000;
+    }
+
+    &.limit_label {
+      width: 49px;
+      height: 25px;
       font-family: Avenir;
       font-size: 18px;
       font-weight: 400;
