--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -2,7 +2,7 @@
   %h2.all_boards_tag
     = @board.title
   - @tasks.each do |task|
-    = link_to task_path(task) do
+    = link_to board_task_path(task) do
       .card
         - if task.eyecatch.attached?
           .card_image
@@ -16,13 +16,13 @@
                 .dropdown_menu
                   = image_tag 'actions.svg', class: 'dropbtn'
                   .dropdown-content.mini
-                    = link_to 'Edit', edit_task_path(task)
-                    = link_to 'Delete', task_path(task), data: {method: 'delete', confirm: '本当に削除してもいよろしいですか？'}
+                    = link_to 'Edit', edit_board_task_path(task)
+                    = link_to 'Delete', board_task_path(task), data: {method: 'delete', confirm: '本当に削除してもいよろしいですか？'}
           .card_content_detail
             = task.content
           .card_detail
             = image_tag task.user.avatar_image
-  = link_to new_task_path do
+  = link_to new_board_task_path(board_id: @board.id) do
     .add_new_board
       .add_new_board_content
         .add_new_board_title
