--- a/app/views/tasks/new.html.haml
+++ b/app/views/tasks/new.html.haml
@@ -5,7 +5,7 @@
   .pageTitle
     %h2.pageTitle_heading New Card
   .sign_form
-    = form_with(model: @task, local: true) do |f|
+    = form_with(model: @task, url: board_tasks_path(board_id: @board.id), local: true) do |f|
       %div
         = f.label :eyecatch, 'Eyecatch', class: 'eyecatch_label'
       %div
