--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -8,8 +8,8 @@
           .dropdown
             = image_tag 'actions.svg', class: 'dropbtn'
             .dropdown-content.mini
-              = link_to 'Edit', edit_task_path(@task)
-              = link_to 'Delete', task_path(@task), data: {method: 'delete', confirm: '本当に削除してもいよろしいですか？'}
+              = link_to 'Edit', edit_board_task_path(@task)
+              = link_to 'Delete', board_task_path(@task), data: {method: 'delete', confirm: '本当に削除してもいよろしいですか？'}
 
 .task_image_section
   - if @task.eyecatch.attached?
@@ -31,13 +31,13 @@
 -#         = link_to article_like_path(@article), data: { method: 'post' } do
 -#           = image_tag 'heart.svg'
 
--# .article
--#   %h2 コメント一覧
--#   - @comments.each do |comment|
--#     .article_comment
--#       %p= comment.content
+.task
+  %h2 コメント一覧
+  - @comments.each do |comment|
+    .task_comment
+      %p= comment.content
 
--# .container 
--#   = link_to new_article_comment_path(@article) do 
--#     .btn-secondary 
--#       コメントを追加
+.container 
+  = link_to new_board_task_comment_path(task_id: @task.id) do 
+    .btn-secondary 
+      コメントを追加
