--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -2,7 +2,7 @@
   %h2.all_boards_tag
     = @board.title
   - @tasks.each do |task|
-    = link_to board_task_path(task) do
+    = link_to board_task_path(@board, task) do
       .card
         - if task.eyecatch.attached?
           .card_image
