--- a/app/assets/stylesheets/card.scss
+++ b/app/assets/stylesheets/card.scss
@@ -15,6 +15,11 @@ $avatar-size: 32px;
   cursor: pointer;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
 
+  &_comment {
+    background-color: $base-bg-color;
+    margin: 16px 0;
+  }
+
   &_title {
     font-size: 22px;
     margin-bottom: 8px;
@@ -51,8 +56,25 @@ $avatar-size: 32px;
     }
   }
 
+  &_comment_detail {
+    display: flex;
+    font-size: 10px;
+
+    img {
+      width: $avatar-size;
+      height: $avatar-size;
+      border-radius: 100%;
+      margin-right: 8px;
+    }
+  }
+
   &_content {
     padding: 16px 16px;
+  }
+
+  &_comment_content {
+    padding: 16px 16px;
+    display: flex;
   }
 
   &_image {
@@ -70,4 +92,12 @@ $avatar-size: 32px;
       width: 100%;
     }
   }
+}
+
+.comment_top {
+  padding-top: 30px;
+}
+
+.comment_title {
+  font-weight: bold;
 }
