--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -21,23 +21,21 @@
     .task_limit
       %h2 Limit
       = @task.limit
--#   - if user_signed_in?
--#     - if current_user.has_liked?(@article)
--#       .article_heart
--#         = link_to article_like_path(@article), data: { method: 'delete' } do
--#           = image_tag'heart-active.svg'
--#     - else 
--#       .article_heart
--#         = link_to article_like_path(@article), data: { method: 'post' } do
--#           = image_tag 'heart.svg'
 
-.task
-  %h2 コメント一覧
-  - @comments.each do |comment|
-    .task_comment
-      %p= comment.content
+  .task
+    .comment_top
+      %h2.comment_title Comment
+      - @comments.each do |comment|
+        .card_comment
+          .card_comment_content
+            .card_comment_detail
+              = image_tag comment.user.avatar_image
+            .card_content_detail
+              = comment.content
 
-.container 
-  = link_to new_board_task_comment_path(task_id: @task.id) do 
-    .btn-secondary 
-      コメントを追加
+    
+      = link_to new_board_task_comment_path(task_id: @task.id) do 
+        .add_new_board
+          .add_new_board_content
+            .add_new_board_title
+              + Add new comment
