--- a/app/views/tasks/show.html.haml
+++ b/app/views/tasks/show.html.haml
@@ -8,8 +8,8 @@
           .dropdown
             = image_tag 'actions.svg', class: 'dropbtn'
             .dropdown-content.mini
-              = link_to 'Edit', edit_board_task_path(@task)
-              = link_to 'Delete', board_task_path(@task), data: {method: 'delete', confirm: '本当に削除してもいよろしいですか？'}
+              = link_to 'Edit', edit_board_task_path(@board, @task)
+              = link_to 'Delete', board_task_path(@board, @task), data: {method: 'delete', confirm: '本当に削除してもいよろしいですか？'}
 
 .task_image_section
   - if @task.eyecatch.attached?
