編集・削除リンクの修正２

--- a/app/views/boards/show.html.haml
+++ b/app/views/boards/show.html.haml
@@ -16,8 +16,8 @@
                 .dropdown_menu
                   = image_tag 'actions.svg', class: 'dropbtn'
                   .dropdown-content.mini
-                    = link_to 'Edit', edit_board_task_path(task)
-                    = link_to 'Delete', board_task_path(task), data: {method: 'delete', confirm: '本当に削除してもいよろしいですか？'}
+                    = link_to 'Edit', edit_board_task_path(@board, task)
+                    = link_to 'Delete', board_task_path(@board, task), data: {method: 'delete', confirm: '本当に削除してもいよろしいですか？'}
           .card_content_detail
             = task.content
           .card_detail
